# WallFlower

./: .env  .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  clock.moon  conf.moon  main.moon  view.moon  weather.moon  worker.moon
src/: error.rs  flickr.rs  lib.rs  main.rs  slideshow.rs  statusbar.rs  weather.rs
