[package]
name = "wallflower"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]

[dependencies]
bytes = "0.4"
env_logger = "*"

hyper = "0.12"
reqwest = "*"
hmac = "*"
sha-1 = "*"
base64 = "0.9"
percent-encoding = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

actix = "0.7"
actix-web = "^0.7"

futures = "0.1"
tokio-core = "0.1"
failure = "*"
failure_derive = "*"
threadpool = "1.7"

uuid = { version = "0.6", features = ["v4"] }
