[package]
name = "wallflower"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]

[dependencies]
env_logger = "*"

reqwest = "*"
hmac = "*"
sha-1 = "*"
base64 = "0.9"
percent-encoding = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

failure = "*"
failure_derive = "*"
threadpool = "1.7"
uuid = { version = "0.6", features = ["v4"] }
piston_window = "0.80.0"
pistoncore-sdl2_window = "0.50"
chrono = "0.4"

# [profile.release]
# lto = true
